<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="160dip"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/bg_finish"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/tv_finish_game"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_finish_dialog_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/ic_home"
        android:text="@string/tv_finish_dialog_home" />

    <Button
        android:id="@+id/btn_finish_dialog_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/ic_next"
        android:text="@string/tv_finish_dialog_next" />

    <TextView
        android:id="@+id/tv_finish_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_finish_dialog_home"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_finish_dialog_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_retry"
        android:text="@string/tv_finish_dialog_retry" />

</RelativeLayout>